[package]
name = "priority_manager"
version = "0.1.0"
authors = ["Mood <mahmoodgladney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
datetime = "0.5.1"
serde_json = "1.0.59"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }